# Rust-C-Compiler

./: .gitignore  Cargo.toml  Makefile  README.md  a.out  text.txt  text.txt.ll  text2.txt
src/compiler/: lib.rs
src/compiler/cli/: mod.rs
src/compiler/error/: mod.rs
src/compiler/generating/: llvm.rs  mod.rs  writer.rs
src/compiler/parsing/: ast.rs  mod.rs
src/compiler/scanning/: mod.rs  token.rs
src/driver/: main.rs
